--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>CodePen - Vertically-scrolling Text</title>
-<script src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script>
+<script src="https://unpkg.com/read-excel-file@5.x/bundle/read-excel-file.min.js"></script> 
 <script src="https://unpkg.com/write-excel-file@1.x/bundle/write-excel-file.min.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 <link rel="stylesheet" href="./style.css">
@@ -32,27 +32,30 @@ ii) To use a different sheet, hover your mouse above (not on) the "Pick Name" bu
 <body id="grad1">
 <!-- partial:index.partial.html -->
 <div id="menu" class="row">
-  <div class="panel panel-default col-xs-12">
-    <div class="panel-heading">
+	<div id="menu-btn" class="panel panel-default col-xs-12">
+		<div class="panel-heading">
       <h3 class="panel-title ">
-        <button type="button" class="btn btn-default" aria-label="Left Align"> <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span> </button>
+        <button id="toggle" type="button" class="btn btn-default" aria-label="Left Align" onClick="swapClass()"> <span class="glyphicon glyphicon-menu-hamburger" aria-hidden="true"></span> </button>
       </h3>
     </div>
-    <div class="panel-body">
+	</div>
+<!--  <div class="panel panel-default col-xs-12">-->
+    <div id="panel-body" class="panel slide-out">
+    <div class="panel-bod ">
       <div id="file" class="form-group">
         <label for="input">Choose file</label>
         <input type="file" id="input">
       </div>
-		<div class="trash">
-      <button type="button" class="btn btn-danger" aria-label="Left Align" onclick="clearLocalStorage()"> <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Clear Local Storage </button>
-		</div>
-		<br>
-		<div class="download">
-      <button type="button" class="btn btn-info" aria-label="Left Align" onclick="exportPage()"> <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Download Winners </button>
-		</div>
+      <div class="trash">
+        <button type="button" class="btn btn-danger" aria-label="Left Align" onclick="clearLocalStorage()"> <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Clear Local Storage </button>
+      </div>
+      <br>
+      <div class="download">
+        <button type="button" class="btn btn-info" aria-label="Left Align" onclick="exportPage()"> <span class="glyphicon glyphicon-download-alt" aria-hidden="true"></span> Download Winners </button>
+      </div>
     </div>
   </div>
-</div>
+</div></div>
 <div class="container" style="padding-top: 25px;">
   <div class="row">
     <div class="col-xs-12">
@@ -61,7 +64,7 @@ ii) To use a different sheet, hover your mouse above (not on) the "Pick Name" bu
   </div>
   <div class="row">
     <div class="col-xs-12">
-      <div class="box confetti">
+      <div class="box">
         <ul id ="names" class="">
           <li></li>
         </ul>
@@ -69,21 +72,22 @@ ii) To use a different sheet, hover your mouse above (not on) the "Pick Name" bu
     </div>
   </div>
   <div class="row">
-    <div class="c9ol-xs-11">
+    <div class="col-xs-12">
       <div class="message">
         <h1 id="congrats" class="text-center bg-success">Congratulations!</h1>
       </div>
     </div>
+	</div>
     <div class="row">
-      <div class="col-xs-10">
-        <div id="upload">
+      <div class="col-xs-12 no-padding">
+        
           <button id="get-data" type="button" class="btn btn-success"><span class="glyphicon glyphicon-hand-up" aria-hidden="true"></span> PICK NAME </button>
           <button id="reset" type="button" class="btn btn-danger"><span class="glyphicon glyphicon-repeat" aria-hidden="true"></span> NEW DRAWING </button>
-        </div>
+       
       </div>
     </div>
   </div>
-</div>
+
 <!-- partial --> 
 
 <script>
@@ -104,6 +108,7 @@ readXlsxFile(input.files[0], {includeNullValues: true}).then(function(rows) {
 			
 		//empty array of random contestants
 		let players = [];
+	
 		
 		//on click of PICK NAME runs function
 		btn.addEventListener('click', function() {
@@ -113,6 +118,7 @@ readXlsxFile(input.files[0], {includeNullValues: true}).then(function(rows) {
 			
 			//sets empty data array to the rows created from promise
 			data = rows;
+			let fileSize = data.length;
 			
 			
 			//a while loop that will keep looping while it's less than the length of the data array
@@ -142,6 +148,14 @@ readXlsxFile(input.files[0], {includeNullValues: true}).then(function(rows) {
 			}
 			//adds the 'list' class to the UL element to start the scroll animation
 			names.classList.add('list');
+			
+			//changes the transform property based on the length of the excel sheet
+			names.animate([
+				{transform: `translateY(0)`},
+				{transform: `translateY(calc((-100% / ${fileSize}) x (${fileSize} - 1)))`},
+			]);
+			
+			//adds the celebrate class to the "congrats" element
 			congrats.classList.add('celebrate');
 			
 			//logs the last 'person' to the console, aka. The Winner and their email
@@ -218,6 +232,11 @@ writeXlsxFile(results,{ schema,
     fileName: 'raffleWinners.xlsx'
   })
 };
+function swapClass(){
+	let panel = document.getElementById('panel-body');
+	panel.classList.toggle('slide-in');
+	panel.classList.toggle('slide-out');
+}
 	
 //  	
 </script>
