--- a/index.html
+++ b/index.html
@@ -14,20 +14,32 @@
 <!--How to use the page:
 File Format:
 1) The file format must be .xls or .xlsx
-2) ONLY Column 1 and Column 2  are displayed (firstName lastName) but column 3 is also read
+2) ONLY Column 1 and Column 2 of the excel sheet is displayed (firstName lastName) but column 3 is also read
 3) Empty Cells throw an error so make sure Col 1, Col 2, and Col 3 are all filled
 4) Col 3 can be any information you want (phone, email, raffle #, ticket #, etc.)
 i) The program has worked with over 28,000 rows with 2 columns & over 14,000 rows with 3 columns
 
 Operation:
 1) Upload your file
-2) Refresh the page
-3) Upload file again (not necessary but it hides the upload button)
-4) Click "Pick Name" (winner is the last person in the 'players' array created below. Winner(s) is logged to the console)
-5) Once the names stop scrolling, you will have your winner and "Congratualtions" will appear
-6) To draw another name, click "New Drawing" and then repeat Step 4
-i) DO NOT REFRESH PAGE OR ALL WINNER INFORMATION WILL BE LOST!
-ii) To use a different sheet, hover your mouse above (not on) the "Pick Name" button, repeat from Step 1 
+2) Click "Pick Name" (winner is the last person in the 'players' array created below. Winner(s) is logged to the console and in localStorage)
+3) Once the names stop scrolling, you will have your winner and "Congratualtions" will appear
+4) To draw another name, click "New Drawing" and then repeat Step 2
+5.0) To download the Winner information, click hamburger icon and then click "Download Winners".
+5.1) This will download an excel sheet to your computer with the: DATE+TIME each winner was picked, NAME of the winner(s),(phone, email, raffle #, ticket #, etc.) of winner(s) 
+i) DO NOT CLICK "CLEAR LOCAL STORAGE" BEFORE YOU CLICK "DOWNLOAD WINNERS" OR ALL WINNER INFORMATION WILL BE LOST!
+ii) To start a new drawing with a new list, Complete Step 5, then hit click "Clear Local Storage", and then repeat from Step 1
+
+How it Works:
+1) The "readexcelfile" reads each row making an array-of-arrays (sheet = main array, each row = sub-array)
+2) A "player" is created and assigned a random number which indicates their index position in the array
+3.0) While the "counter" is less than the number of rows (numOfROws - 1), 
+    the "player" is checked against an exclusion array that checks to see if that "player" has been picked already
+3.1) If the "player" has been picked, then the loop restarts
+3.2) If the "player" has NOT been picked, then a "person" is created using the "player" index 
+    and added to the "players" array and the "counter" goes up by 1
+4) Once the "players" array is finished, a for-loop creates a <li> tag for each "person"
+5) When the "Pick Name" button is clicked, the list of names is scrolled until the "winner" (last <li> tag) appears
+6) When the "New Drawing" button is clicked, the "players" and  "exclusions" arrays are emptied, and the internal "counter" is reset to 0
 -->
 </head>
 <body id="grad1">
