Some changes to make Chrome work

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ How it Works:
     <div class="panel-bod ">
       <div id="file" class="form-group">
         <label for="input">Choose file</label>
-        <input type="file" id="input">
+        <input type="file" id="input" onchange="pickName()">
       </div>
       <div class="trash">
         <button type="button" class="btn btn-danger" aria-label="Left Align" onclick="clearLocalStorage()"> <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Clear Local Storage </button>
