--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ How it Works:
     <div class="panel-bod ">
       <div id="file" class="form-group">
         <label for="input">Choose file</label>
-        <input type="file" id="input" onchange="pickName()">
+        <input type="file" id="input">
       </div>
       <div class="trash">
         <button type="button" class="btn btn-danger" aria-label="Left Align" onclick="clearLocalStorage()"> <span class="glyphicon glyphicon-trash" aria-hidden="true"></span> Clear Local Storage </button>
@@ -73,7 +73,13 @@ How it Works:
       </div>
 	  <div class="form-group">
         <label id="duration" for="input">Duration:</label><br>
-        <input type="range" class="form-range" min="0" value="5" max="20" step="1" id="customRange3">
+        <input type="range" class="form-range" min="0" value="5" max="30" step="1" id="customRange3">
+      </div>
+      <div class="form-check">
+        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+        <label class="form-check-label " for="flexCheckDefault">
+          Exclude previous winners?
+        </label>
       </div>
     </div>
   </div>
