--- a/raffle-beta.html
+++ b/raffle-beta.html
@@ -46,17 +46,15 @@ How it Works:
 -->
 </head>
 
-<body id="grad1" class="overflow-hidden">
-  
+<body id="grad1" class="overflow-hidden h-100">
+  <!--SIDE MENU BUTTON-->
   <div class="z-2 p-st">
-    <button class="btn btn-outline-secondary btn-lg position-absolute bottom-0 start-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasScrolling"
+    <button class="btn btn-outline-secondary btn-lg position-absolute bottom-0 start-0" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasMenu"
       aria-controls="offcanvasScrolling"><i class="bi bi-list"></i></button>
   </div>
-  <div class="position-absolute z-1" id="confetti">
-      <img src="" width="100%" id="confettiImg">
-  </div>
-  <div class="offcanvas offcanvas-start bg-body-tertiary" data-bs-scroll="true" data-bs-backdrop="false" tabindex="0"
-    id="offcanvasScrolling" aria-labelledby="offcanvasScrollingLabel">
+  <!--SIDE MENU-->
+  <div class="offcanvas offcanvas-start bg-body-tertiary" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+    id="offcanvasMenu" aria-labelledby="offcanvasMenu">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Settings</h5>
       <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -76,18 +74,25 @@ How it Works:
         <div class="card-body">
           <div class="form-group">
             <label class="form-label" for="input">Raffle Title</label><br>
-            <input placeholder="Enter Title Here" type="text" id="raffle-title">
+            <input placeholder="Enter Title Here" type="text" id="raffle-title" />
           </div>
           <!--RAFFLE Duration-->
           <div class="form-group my-2">
             <label id="duration" class="form-label" for="input">Duration:</label><br>
-            <input type="range" class="form-range" min="0" value="5" max="30" step="1" id="customRange3">
+            <input type="range" class="form-range" min="0" value="5" max="30" step="1" id="customRange3" />
           </div>
           <!--HIDE Congrats Message-->
           <div class="form-check">
-            <input class="form-check-input" type="checkbox" value="" id="congratsBox" onclick="hideCongrats()">
+            <input class="form-check-input" type="checkbox" value="congrats-message" id="congratsBox" onclick="hideCongrats()" />
             <label class="form-check-label" for="congrats-message">
               Hide "Congratulations" Message
+            </label>
+          </div>
+           <!--HIDE Confetti-->
+           <div class="form-check">
+            <input class="form-check-input" type="checkbox" value="confetti-message" id="confettiBox" checked />
+            <label class="form-check-label" for="confetti-message">
+              Hide Confetti
             </label>
           </div>
           <!--EXCLUDE Winners-->
@@ -208,7 +213,10 @@ How it Works:
 
     </div>
   </div>
-
+<!--CONFETTI-->
+  <div class="position-absolute z-1" id="confetti">
+      <img src="" width="100%" id="confettiImg">
+  </div>
   <!--Raffle Main-->
   <div class="container" style="padding-top: 25px; ">
     <div class="row">
@@ -258,6 +266,7 @@ How it Works:
     </div>
   </div>
   <script src="/raffle-beta.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
