Slight adjustments Offcanvas
Tried to make some slight adjustments to the offcanvas

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ How it Works:
       aria-controls="offcanvasScrolling"><i class="bi bi-list"></i></button>
   </div>
   <!--SIDE MENU-->
-  <div class="offcanvas offcanvas-start bg-body-tertiary" data-bs-scroll="true" data-bs-backdrop="false" tabindex="-1"
+  <div class="offcanvas offcanvas-start bg-body-tertiary" data-bs-backdrop="false" tabindex="-1"
     id="offcanvasMenu" aria-labelledby="offcanvasMenu">
     <div class="offcanvas-header">
       <h5 class="offcanvas-title" id="offcanvasScrollingLabel">Settings</h5>
@@ -218,7 +218,7 @@ How it Works:
       <img src="" width="100%" id="confettiImg">
   </div>
   <!--Raffle Main-->
-  <div class="container" style="padding-top: 25px; ">
+  <div class="container" style="padding-top: 25px; padding-left: 25px">
     <div class="row">
       <div class="col-xs-12">
         <h1 id="title" class="text-center text-danger"></h1>
