--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@ How it Works:
       <img src="" width="100%" id="confettiImg">
   </div>
   <!--Raffle Main-->
-  <div class="container" style="padding-top: 25px; ">
+  <div class="container" style="padding-top: 25px; margin-top:14%">
     <div class="row">
       <div class="col-xs-12">
         <h1 id="title" class="text-center text-danger"></h1>
