--- a/index.html
+++ b/index.html
@@ -246,20 +246,20 @@ How it Works:
         <button id="reset" type="button" class="btn btn-danger"><i class="bi bi-arrow-clockwise"></i> NEW DRAWING </button>
       </div>
     </div>
-    <div class="row w-75 h-auto pt-2 mx-auto">
-      <div id="carouselExample" class="carousel slide carousel-dark visually-hidden">
+    <div id="carouselContainer" class="row pt-2 mx-auto">
+      <div id="carouselExample" class="carousel slide carousel-dark visually-hidden w-75">
         <div class="firstCar visually-hidden">
-            <img src="https://files.constantcontact.com/8a509b6a801/78c34c9b-1e78-4bb2-abe8-1b45f1e7b0cc.png" class="d-block w-100" alt="...">
-          </div>
+            <img src="https://files.constantcontact.com/8a509b6a801/78c34c9b-1e78-4bb2-abe8-1b45f1e7b0cc.png" class="d-block mx-auto, mt-5" alt="...">
+        </div>
           <div class="carousel-inner">
           
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="carousel-control-prev-icon" aria-hidden="true" style="width:80px; height:80px;"></span>
           <span class="visually-hidden">Previous</span>
         </button>
         <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="carousel-control-next-icon" aria-hidden="true" style="width:80px; height:80px;"></span>
           <span class="visually-hidden">Next</span>
         </button>
       </div>
