Auto Rows and Columns
Table auto generates cols and rows from uploaded data

still working on checkDisplay, _entry, and how to make it work in the overall look

--- a/index.html
+++ b/index.html
@@ -230,42 +230,22 @@ How it Works:
             </tr>
           </thead>
           <tbody id="fileBody">
-            <tr>
- 
-              <td>Mark</td>
-              <td>Otto</td>
-              <td>@mdo</td>
+            <tr id="fileBody1">
             </tr>
-            <tr>
-
-              <td>Jacob</td>
-              <td>Thornton</td>
-              <td>@fat</td>
+            <tr id="fileBody2">
             </tr>
-            <tr>
-
-              <td>Larry the Bird</td>
-              <td>@twitter</td>
-              <td>@fat</td>
+            <tr id="fileBody3">
             </tr>
-            <tr>
-
-              <td>Larry the Bird</td>
-              <td>@twitter</td>
-              <td>@fat</td>
+            <tr id="fileBody4">
             </tr>
-            <tr>
-
-              <td>Larry the Bird</td>
-              <td>@twitter</td>
-              <td>@fat</td>
+            <tr id="fileBody5">
             </tr>
           </tbody>
         </table>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-primary" id="colDisplay">Save changes</button>
       </div>
     </div>
   </div>
