Fixed Column Selector and File Download
The column selector now works and opens up the modal after upload.

The issue with the download  was that write-excel-file has to have "schema" and not another variable with the word schema

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ How it Works:
           <label class="form-label" for="input">
             <h6>Choose file</h6>
           </label>
-          <input type="file" class="form-control" id="input" width="10" onchange="validateFile()">
+          <input type="file" class="form-control" id="input" width="10" onchange="validateFile()" data-bs-toggle="modal" data-bs-target="#dataSample">
         </div>
       </div>
       <!--RAFFLE Title-->
@@ -216,11 +216,11 @@ How it Works:
   </div>
   <!--FILE MODAL-->
   <!-- Modal -->
-<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal fade modal-lg" id="dataSample" tabindex="-1" aria-labelledby="dataSample" aria-hidden="true">
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h1 class="modal-title fs-5" id="exampleModalLabel">Pick which values will be displayed</h1>
+        <h1 class="modal-title fs-5" id="dataSampleLabel">Pick which values will be displayed</h1>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
@@ -246,7 +246,7 @@ How it Works:
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary" id="colDisplay">Save changes</button>
+        <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Save changes</button>
       </div>
     </div>
   </div>
@@ -283,7 +283,7 @@ How it Works:
       <div class="col-xs-12 no-padding z-2">
         <button id="get-data" type="button" class="btn btn-success"><i class="bi bi-hand-index"></i> PICK NAME </button>
         <button id="reset" type="button" class="btn btn-danger"><i class="bi bi-arrow-clockwise"></i> NEW DRAWING </button>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#dataSample">
           Launch demo modal
         </button>
         
