--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400&display=swap" rel="stylesheet">
 
 
   <!--How to use the page:
@@ -63,43 +66,47 @@ How it Works:
     <div class="offcanvas-body">
       <!--UPLOAD File-->
       <div id="file" class="card form-group bg-body-secondary mb-2">
-        <div class="card-body">
+        <div class="card-body d-grid">
           <label class="form-label" for="input">
-            <h6>Choose file</h6>
+            <h5 class="text-uppercase fw-bold">Choose file</h5>
           </label>
           <input type="file" class="form-control" id="input" width="10" onchange="validateFile()" data-bs-toggle="modal" data-bs-target="#dataSample">
+          <span class="card-text fw-lighter">*must be .xls or .xlsx file type</span>
+          <button type="button" class="btn btn-outline-secondary btn-sm" data-bs-toggle="modal" data-bs-target="#dataSample">
+            Change Displayed Columns
+          </button>
         </div>
       </div>
       <!--RAFFLE Title-->
       <div class="card">
         <div class="card-body">
           <div class="form-group">
-            <label class="form-label" for="input">Raffle Title</label><br>
+            <label class="form-label text-uppercase" for="input">Raffle Title</label><br>
             <input placeholder="Enter Title Here" type="text" id="raffle-title" />
           </div>
           <!--RAFFLE Duration-->
           <div class="form-group my-2">
-            <label id="duration" class="form-label" for="input">Duration:</label><br>
+            <label id="duration" class="form-label text-uppercase" for="input">Duration:</label><br>
             <input type="range" class="form-range" min="0" value="5" max="30" step="1" id="customRange3" />
           </div>
           <!--HIDE Congrats Message-->
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="congrats-message" id="congratsBox" onclick="hideCongrats()" />
-            <label class="form-check-label" for="congrats-message">
+            <label class="form-check-label text-uppercase" for="congrats-message">
               Hide "Congratulations" Message
             </label>
           </div>
            <!--HIDE Confetti-->
            <div class="form-check">
             <input class="form-check-input" type="checkbox" value="confetti-message" id="confettiBox" checked />
-            <label class="form-check-label" for="confetti-message">
+            <label class="form-check-label text-uppercase" for="confetti-message">
               Hide Confetti
             </label>
           </div>
           <!--EXCLUDE Winners-->
           <div class="form-check">
             <input class="form-check-input" type="checkbox" value="" id="excludeWinners">
-            <label class="form-check-label" for="excludeWinners">
+            <label class="form-check-label text-uppercase" for="excludeWinners">
               Exclude previous winners
             </label>
           </div>
@@ -181,7 +188,7 @@ How it Works:
       <div class="card my-2">
         <div class="card-body">
           <div class="form-group">
-            <label class="form-label" for="car-upload">Carousel Image(s) Upload</label><br>
+            <label class="form-label text-uppercase" for="car-upload">Carousel Image(s) Upload</label><br>
       <!--Carousel Upload-->
       <div id="car-input" class="text-center">
         <input id="car-upload" type="file" class="form-control my-2" width="10" aria-hidden="true" accept="image/png" multiple oninput="buildCarousel()">
@@ -189,7 +196,7 @@ How it Works:
         <!--Carousel Hide-->
         <div class="form-check">
           <input class="form-check-input" type="checkbox" value="" id="hideCarousel" onchange="hideCarousel()" checked>
-          <label class="form-check-label" for="hideCarousel">
+          <label class="form-check-label text-uppercase" for="hideCarousel">
             Hide Carousel
           </label>
         </div>
@@ -283,9 +290,6 @@ How it Works:
       <div class="col-xs-12 no-padding z-2">
         <button id="get-data" type="button" class="btn btn-success"><i class="bi bi-hand-index"></i> PICK NAME </button>
         <button id="reset" type="button" class="btn btn-danger"><i class="bi bi-arrow-clockwise"></i> NEW DRAWING </button>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#dataSample">
-          Launch demo modal
-        </button>
         
       </div>
     </div>
